force-app/main/default/objects/Portfolio_Of_Loan__x/Portfolio_Of_Loan__x.object-meta.xml
<CustomObject>
    <description>Portfolio of Loans</description>
    <externalDataSource>Core_Banking_Data_Source</externalDataSource>
    <externalName>PortfolioOfLoan</externalName>
    <label>Portfolio Of Loans</label>
    <pluralLabel>Portfolio Of Loans</pluralLabel>
</CustomObject>