force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Name attached to the product instance on CAP</description>
    <externalDeveloperName>AccountName</externalDeveloperName>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>