force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>An identifier assigned to an Account as known by the Account Holder</description>
    <externalDeveloperName>AccountNumber</externalDeveloperName>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>