force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>A BSB (Bank/Branch Number)  is a 6-digit number that identifies banks and branches in Australia. It stands for &apos;Bank-State-Branch&apos;. 

CAA definition: Domicile branch for the  account</description>
    <externalDeveloperName>Branch</externalDeveloperName>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>