force-app/main/default/objects/Portfolio_Of_Loan__x/fields/CPID__c.field-meta.xml
<CustomField>
    <fullName>CPID__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Controlling Post</description>
    <externalDeveloperName>CPID</externalDeveloperName>
    <label>CPID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>