force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Associated Id of the customer</description>
    <externalDeveloperName>CustomerId</externalDeveloperName>
    <label>Customer</label>
    <length>255</length>
    <referenceTargetField>Account.External_Id__c</referenceTargetField>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Portfolio Of Loans</relationshipLabel>
    <relationshipName>Portfolio_Of_Loans</relationshipName>
    <type>IndirectLookup</type>
</CustomField>