force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>The date the account record was established</description>
    <externalDeveloperName>DateOpened</externalDeveloperName>
    <label>Date Opened</label>
    <length>50</length>
    <type>Text</type>
</CustomField>