force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Expires__c.field-meta.xml
<CustomField>
    <fullName>Expires__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>The expiry date of facility</description>
    <externalDeveloperName>Expires</externalDeveloperName>
    <label>Expiry Date</label>
    <type>DateTime</type>
</CustomField>