force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Current Facility Limit</description>
    <externalDeveloperName>Limit</externalDeveloperName>
    <label>Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>