force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Loan_Term_Month__c.field-meta.xml
<CustomField>
    <fullName>Loan_Term_Month__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>The duration of the loan as agreed with the customer during which the customer is liable to principal and interest payments, fees and other charges</description>
    <externalDeveloperName>LoanTermMonth</externalDeveloperName>
    <label>Loan Term (Months)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>