force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Product code for product sent from ANZ System</description>
    <externalDeveloperName>ProductCode</externalDeveloperName>
    <label>Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>