force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>The product name</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>