force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Purpose_Code__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>A dropdown which allows the user specify what is the purpose of the account</description>
    <externalDeveloperName>PurposeCode</externalDeveloperName>
    <label>Purpose Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>