force-app/main/default/objects/Portfolio_Of_Loan__x/fields/SAO__c.field-meta.xml
<CustomField>
    <fullName>SAO__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Salesforce</complianceGroup>
    <description>SAO</description>
    <externalDeveloperName>SAO</externalDeveloperName>
    <label>SAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>