force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Source_System_Status__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Map to persisted financial account source system status retrieved and loaded from OCV.</description>
    <externalDeveloperName>SourceSystemStatus</externalDeveloperName>
    <label>Source System Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>