force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Statement_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Statement_Mailing_Address__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non-Sensitive_Personal_Information;Source_Caps</complianceGroup>
    <description>Statement Mailing Address</description>
    <externalDeveloperName>StatementMailingAddress</externalDeveloperName>
    <label>Statement Mailing Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>