force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Sub_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Product_Code__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>Sub Product code for product sent from ANZ System</description>
    <externalDeveloperName>SubProductCode</externalDeveloperName>
    <label>Sub-Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>