force-app/main/default/objects/Portfolio_Of_Loan__x/fields/Suncorp_Bank_Move__c.field-meta.xml
<CustomField>
    <fullName>Suncorp_Bank_Move__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Date when the migration is happening or has occurred</description>
    <externalDeveloperName>SuncorpBankMove</externalDeveloperName>
    <label>Suncorp Bank Move</label>
    <type>Date</type>
</CustomField>