force-app/main/default/objects/Portfolio_Of_Loan__x/fields/TPMI__c.field-meta.xml
<CustomField>
    <fullName>TPMI__c</fullName>
    <complianceGroup>Privacy_Non_Personal_Information;Source_Salesforce;Integrity_Accurate</complianceGroup>
    <description>TPMI</description>
    <externalDeveloperName>TPMI</externalDeveloperName>
    <label>TPMI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>