force-app/main/default/objects/Portfolio_Of_Loan__x/fields/TPMI_SAO__c.field-meta.xml
<CustomField>
    <fullName>TPMI_SAO__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Caps</complianceGroup>
    <description>Broker code. Unique identifier of a loan broker</description>
    <externalDeveloperName>TpmiSao</externalDeveloperName>
    <label>TPMI-SAO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>